--- a/Requirements.txt
+++ b/Requirements.txt
@@ -13,3 +13,10 @@ Stripe Integration
 * Once validated, Rails should send user info (email, plan id) and cark token
   to Stripe server and Stripe will create a subscription and send back customer token.
   Rails should save customer token and user information to our database.
+  
+  User Profiles
+  # Each user should have one profile.
+  # User should see a link to new profile form upon signing up.
+  # User should be able to create and view their user profile.
+  # User profile should have a profile picture.
+  # User should be able to view all user profiles.
